fix codec