@@ -55,16 +55,16 @@ import java.util.stream.Collectors;
  */
 public class TeamTownData implements SpecialData{
 	public static final Codec<TeamTownData> CODEC=RecordCodecBuilder.create(t->t.group(
-            CodecUtil.defaultValue(Codec.STRING, "Default Town").fieldOf("name").forGetter(o->o.name),
-			CodecUtil.defaultValue(TownResourceHolder.CODEC, new TownResourceHolder()).fieldOf("resources").forGetter(o->o.resources),
-			CodecUtil.defaultValue(CodecUtil.mapCodec("pos", CodecUtil.BLOCKPOS, "data", TownWorkerData.CODEC), ImmutableMap.of()).fieldOf("blocks").forGetter(o->o.blocks),
-			CodecUtil.defaultValue(CodecUtil.mapCodec("uuid",UUIDUtil.CODEC,"data",Resident.CODEC), ImmutableMap.of()).fieldOf("residents").forGetter(o->o.residents)
+            Codec.STRING.fieldOf("name").forGetter(o->o.name),
+			TownResourceHolder.CODEC.fieldOf("resources").forGetter(o->o.resources),
+			CodecUtil.mapCodec("pos", CodecUtil.BLOCKPOS, "data", TownWorkerData.CODEC).optionalFieldOf("blocks",Map.of()).forGetter(o->o.blocks),
+			CodecUtil.mapCodec("uuid",UUIDUtil.CODEC,"data",Resident.CODEC).optionalFieldOf("residents",Map.of()).forGetter(o->o.residents)
     ).apply(t, TeamTownData::new));
 //    public static final Codec<TeamTownData> CODEC = CodecUtil.debugCodec(CODEC_TOWN);
     /**
      * The town name.
      */
-	String name;
+	String name="Default Town";
     /**
      * The town residents.
      */
